# aimai-search

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
aimai_search/: __init__.py  lib.py
scripts/: generate_readme_example.py
tests/: test_aimai_search.py
