[tool.poetry]
name = "aimai-search"
version = "0.1.0"
description = ""
authors = ["reiyw <reiyw.setuve@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cutlet = "^0.1.3"
rapidfuzz = ">=0.9.1,<0.13.0"
attrs = ">=19.3,<21.0"
more-itertools = "^8.4.0"
unidic-lite = "^1.0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1"

[tool.isort]
line_length = 88
# force_grid_wrap = 0
# atomic = true
include_trailing_comma = true
# lines_after_imports = 2
multi_line_output = 3
# use_parentheses = true
# not_skip = "__init__.py"
# filter_files = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
