[tool.poetry]
name = "aimai-search"
version = "0.1.0"
description = "Fuzzy search in both Japanese and English"
authors = ["reiyw <reiyw.setuve@gmail.com>"]
readme = "README.md"
repository = "https://github.com/reiyw/aimai-search"

[tool.poetry.dependencies]
python = "^3.7"
cutlet = "^0.1.13"
rapidfuzz = ">=0.9.1,<0.13.0"
attrs = ">=19.3,<21.0"
more-itertools = "^8.4.0"
unidic-lite = "^1.0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1"

[tool.isort]
line_length = 88
include_trailing_comma = true
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
